397968: SONR FIX