@@ -23,16 +23,16 @@ public class LuxuryVariantProductCategoryDecorator implements CSVCellDecorator
 
 	/*
 	 * @Javadoc
-	 * 
+	 *
 	 * @param position,srcLine
-	 * 
+	 *
 	 * @return finalvalue
 	 */
 	@Override
 	public String decorate(final int position, final Map<Integer, String> srcLine)
 	{
 
-		final Integer position2 = new Integer(15);
+		final Integer position2 = Integer.valueOf(15);
 		final String categories = srcLine.get(position);
 		final String luxIndicator = srcLine.get(position2);
 
